link to dashboard

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,3 +1,5 @@
 <h1>Admin Dashboard</h1>
 <%= @product_count %>
 <%= @category_count %> 
+
+<td>Number of <%= link_to 'products', admin_products_path %> in the store</td> 
